# otr

./: pyproject.toml
data/: data.json  slurp-shows.bash
data/json-data/: 1000.json  10000.json  10002.json  10003.json  10004.json  10005.json  10006.json  10007.json  10008.json  10009.json  1001.json  10010.json  10011.json  10012.json  10013.json  10014.json  10017.json  10018.json  10019.json  10020.json  10021.json  10022.json  10023.json  10024.json  10025.json  10026.json  10027.json  10028.json  10029.json  1003.json  10030.json  10031.json  10032.json  10033.json  10034.json  10036.json  10037.json  10038.json  10039.json  1004.json  (+10627 more)
src/otr/: __init__.py  chooser.py  cli.py  fuzzy.py  slugify.py
